refactor(domain): move models to domain/models package
