# backend/docs/swagger.yaml
@@ -1,116 +1,5 @@
 basePath: /
 definitions:
-  domain.Attachment:
-    properties:
-      title:
-        type: string
-      type:
-        type: string
-    type: object
-  domain.Author:
-    enum:
-    - counterpart
-    - system
-    - user
-    type: string
-    x-enum-comments:
-      AuthorCounterpart: собеседник (потенциальный мошенник)
-      AuthorSystem: служебная вставка
-      AuthorUser: реплика самого пользователя
-    x-enum-descriptions:
-    - собеседник (потенциальный мошенник)
-    - служебная вставка
-    - реплика самого пользователя
-    x-enum-varnames:
-    - AuthorCounterpart
-    - AuthorSystem
-    - AuthorUser
-  domain.Counterpart:
-    properties:
-      name:
-        type: string
-      rating:
-        type: number
-      registered:
-        type: string
-      reviews:
-        type: integer
-    type: object
-  domain.Ending:
-    properties:
-      outcome:
-        $ref: '#/definitions/domain.Outcome'
-      text:
-        type: string
-      title:
-        type: string
-    type: object
-  domain.FlagInfo:
-    properties:
-      id:
-        type: string
-      text:
-        type: string
-      title:
-        type: string
-    type: object
-  domain.Listing:
-    properties:
-      image:
-        description: 'TODO: решить вопрос с image'
-        type: string
-      location:
-        type: string
-      price:
-        type: integer
-      title:
-        type: string
-    type: object
-  domain.Message:
-    properties:
-      attachment:
-        $ref: '#/definitions/domain.Attachment'
-      author:
-        $ref: '#/definitions/domain.Author'
-      text:
-        type: string
-    type: object
-  domain.Outcome:
-    enum:
-    - safe
-    - partial
-    - scammed
-    type: string
-    x-enum-varnames:
-    - OutcomeSafe
-    - OutcomePartial
-    - OutcomeScammed
-  domain.Role:
-    enum:
-    - buyer
-    - seller
-    type: string
-    x-enum-varnames:
-    - RoleBuyer
-    - RoleSeller
-  domain.Verdict:
-    enum:
-    - safe
-    - risky
-    - fatal
-    type: string
-    x-enum-comments:
-      VerdictFatal: fatal — точка невозврата
-      VerdictRisky: risky — рискованное, но не фатальное
-      VerdictSafe: safe  — безопасное действие;
-    x-enum-descriptions:
-    - safe  — безопасное действие;
-    - risky — рискованное, но не фатальное
-    - fatal — точка невозврата
-    x-enum-varnames:
-    - VerdictSafe
-    - VerdictRisky
-    - VerdictFatal
   httptransport.ChoiceRequest:
     properties:
       expected_revision:
@@ -205,7 +94,7 @@ definitions:
       completedAt:
         type: string
       outcome:
-        $ref: '#/definitions/domain.Outcome'
+        $ref: '#/definitions/models.Outcome'
       score:
         $ref: '#/definitions/httptransport.scoreResponse'
     type: object
@@ -259,7 +148,7 @@ definitions:
       passedScenarios:
         type: integer
       role:
-        $ref: '#/definitions/domain.Role'
+        $ref: '#/definitions/models.Role'
       scenarios:
         items:
           $ref: '#/definitions/httptransport.scenarioProgressResponse'
@@ -307,6 +196,117 @@ definitions:
       points:
         type: integer
     type: object
+  models.Attachment:
+    properties:
+      title:
+        type: string
+      type:
+        type: string
+    type: object
+  models.Author:
+    enum:
+    - counterpart
+    - system
+    - user
+    type: string
+    x-enum-comments:
+      AuthorCounterpart: собеседник (потенциальный мошенник)
+      AuthorSystem: служебная вставка
+      AuthorUser: реплика самого пользователя
+    x-enum-descriptions:
+    - собеседник (потенциальный мошенник)
+    - служебная вставка
+    - реплика самого пользователя
+    x-enum-varnames:
+    - AuthorCounterpart
+    - AuthorSystem
+    - AuthorUser
+  models.Counterpart:
+    properties:
+      name:
+        type: string
+      rating:
+        type: number
+      registered:
+        type: string
+      reviews:
+        type: integer
+    type: object
+  models.Ending:
+    properties:
+      outcome:
+        $ref: '#/definitions/models.Outcome'
+      text:
+        type: string
+      title:
+        type: string
+    type: object
+  models.FlagInfo:
+    properties:
+      id:
+        type: string
+      text:
+        type: string
+      title:
+        type: string
+    type: object
+  models.Listing:
+    properties:
+      image:
+        description: 'TODO: решить вопрос с image'
+        type: string
+      location:
+        type: string
+      price:
+        type: integer
+      title:
+        type: string
+    type: object
+  models.Message:
+    properties:
+      attachment:
+        $ref: '#/definitions/models.Attachment'
+      author:
+        $ref: '#/definitions/models.Author'
+      text:
+        type: string
+    type: object
+  models.Outcome:
+    enum:
+    - safe
+    - partial
+    - scammed
+    type: string
+    x-enum-varnames:
+    - OutcomeSafe
+    - OutcomePartial
+    - OutcomeScammed
+  models.Role:
+    enum:
+    - buyer
+    - seller
+    type: string
+    x-enum-varnames:
+    - RoleBuyer
+    - RoleSeller
+  models.Verdict:
+    enum:
+    - safe
+    - risky
+    - fatal
+    type: string
+    x-enum-comments:
+      VerdictFatal: fatal — точка невозврата
+      VerdictRisky: risky — рискованное, но не фатальное
+      VerdictSafe: safe  — безопасное действие;
+    x-enum-descriptions:
+    - safe  — безопасное действие;
+    - risky — рискованное, но не фатальное
+    - fatal — точка невозврата
+    x-enum-varnames:
+    - VerdictSafe
+    - VerdictRisky
+    - VerdictFatal
   training.ChoiceResult:
     properties:
       feedback:
@@ -317,7 +317,7 @@ definitions:
         $ref: '#/definitions/training.ScenePayload'
       reaction:
         items:
-          $ref: '#/definitions/domain.Message'
+          $ref: '#/definitions/models.Message'
         type: array
       revision:
         type: integer
@@ -329,7 +329,7 @@ definitions:
       text:
         type: string
       verdict:
-        $ref: '#/definitions/domain.Verdict'
+        $ref: '#/definitions/models.Verdict'
     type: object
   training.OptionPayload:
     properties:
@@ -349,7 +349,7 @@ definitions:
       id:
         type: string
       role:
-        $ref: '#/definitions/domain.Role'
+        $ref: '#/definitions/models.Role'
       slug:
         type: string
       stats:
@@ -368,7 +368,7 @@ definitions:
     properties:
       intro:
         items:
-          $ref: '#/definitions/domain.Message'
+          $ref: '#/definitions/models.Message'
         type: array
       options:
         items:
@@ -384,11 +384,11 @@ definitions:
       attempt_id:
         type: string
       counterpart:
-        $ref: '#/definitions/domain.Counterpart'
+        $ref: '#/definitions/models.Counterpart'
       listing:
-        $ref: '#/definitions/domain.Listing'
+        $ref: '#/definitions/models.Listing'
       role:
-        $ref: '#/definitions/domain.Role'
+        $ref: '#/definitions/models.Role'
       scene:
         $ref: '#/definitions/training.ScenePayload'
       scenes_total:
@@ -401,13 +401,13 @@ definitions:
       delta_vs_previous:
         type: integer
       ending:
-        $ref: '#/definitions/domain.Ending'
+        $ref: '#/definitions/models.Ending'
       missed_flags:
         items:
-          $ref: '#/definitions/domain.FlagInfo'
+          $ref: '#/definitions/models.FlagInfo'
         type: array
       outcome:
-        $ref: '#/definitions/domain.Outcome'
+        $ref: '#/definitions/models.Outcome'
       score:
         type: integer
       steps_total:
